# quick-lint-js

./: .gitignore
benchmark/: benchmark-parse.cpp
fuzz/: CMakeLists.txt  fuzz-options.cpp  fuzz-parse.cpp
src/: lex.cpp  lint.cpp  text-error-reporter.cpp  vim-qflist-json-error-reporter.cpp
src/include/quick-lint-js/: char8.h  error.h  lex.h  lint.h  text-error-reporter.h  vim-qflist-json-error-reporter.h
src/quick-lint-js/: error.h  lex.h  lint.h
test/: error-collector.cpp  test-lex.cpp
test/include/quick-lint-js/: error-collector.h
